--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,3 +23,11 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ .container {
+  display: grid;
+  position: relative;
+  height: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
