--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,67 @@
-.new-tweet {
+/* responsive layout for smartphones */
+@media only screen and (max-width: 430px) {
+  h2 {
+    margin: 10px;
+  }
+
+  .new-tweet {
+    grid-column: 2;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .tweet-form {
+    width: 90%;
+    margin: 10px;
+    text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .tweet-label {
+    font-size: 20px;
+  }
+
+  .tweet-text-area {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: #ADD8E6;
+    resize: none;
+    font-family: 'Source Sans Pro';
+    font-weight: bold;
+    height: 80px;
+  }
+  
+  .tweet-text-area::placeholder {
+    font-weight: bolder;
+  }
+  
+  .tweet-submit-button {
+    font-family: "Bungee";
+    background-color: #4056A1;
+    color: #ffffff;
+  }
+  
+  .counter {
+    font-weight: 700;
+  }
+
+  .black{
+    color: black;
+  }
+
+  .red{
+    color:red;
+  }
+}
+
+
+/* responsive design for tablet */
+@media only screen and (min-width: 430px) and (max-width: 1024px) {
+  .new-tweet {
+    grid-column: 2;
     text-align: center;
     width: 100%;
   }
@@ -12,7 +75,7 @@
     justify-content: space-between;
   }
   
-  #tweet-text {
+  .tweet-text-area {
     width: 100%;
     border: none;
     border-bottom: 2px solid black;
@@ -23,15 +86,8 @@
     height: 80px;
   }
   
-  #tweet-text::placeholder {
+  .tweet-text-area::placeholder {
     font-weight: bolder;
-  }
-
-  .button_counter_section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 10px;
   }
   
   .tweet-submit-button {
@@ -42,7 +98,6 @@
   
   .counter {
     font-weight: 700;
-    font-family: "Bungee";
   }
 
   .black{
@@ -52,3 +107,55 @@
   .red{
     color:red;
   }
+}
+
+ /* Responsive design for desktop */
+ @media only screen and (min-width: 1024px) {
+  .new-tweet {
+    grid-column: 2;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .tweet-form {
+    width: 90%;
+    margin: auto;
+    text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .tweet-text-area {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: #ADD8E6;
+    resize: none;
+    font-family: 'Source Sans Pro';
+    font-weight: bold;
+    height: 80px;
+  }
+  
+  .tweet-text-area::placeholder {
+    font-weight: bolder;
+  }
+  
+  .tweet-submit-button {
+    font-family: "Bungee";
+    background-color: #4056A1;
+    color: #ffffff;
+  }
+  
+  .counter {
+    font-weight: 700;
+  }
+
+  .black{
+    color: black;
+  }
+
+  .red{
+    color:red;
+  }
+}
