--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -14,20 +15,111 @@ html {
  * Global layout stuff
  */
 
-body {
-  color: #545149;
-  background-color: #f4f1ec;
-  font-size: 24px;
-}
-
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+/* responsive design for smartphones */
+@media only screen and (max-width: 430px) {
+  body {
+    color: (84, 81, 73);
+    background-color: #dfeef3;
+    font-size: 24px;
+    font-family: 'Source Sans Pro';
+    display: grid;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  .container {
+    display: grid;
+    grid-template-columns: 5% 90% 5%;
+    height: 100%;
+  }
+  
+  .tweet-label {
+    text-align: left;
+    display: block;
+  }
+  
+  .error-message {
+    grid-column: 2;
+    border: 2px solid red;
+    color: red;
+    padding: 0.5em;
+    margin: 0.5em;
+    text-align: center;
+  }
+}
 
- .container {
-  display: grid;
-  position: relative;
-  height: 100%;
-  margin-left: 5%;
-  margin-right: 5%;
+
+/* responsive design for tablet */
+@media only screen and (min-width: 430px) and (max-width: 1024px) {
+  body {
+    color: (84, 81, 73);
+    background-color: #dfeef3;
+    font-size: 24px;
+    font-family: 'Source Sans Pro';
+    display: grid;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  .container {
+    display: grid;
+    grid-template-columns: 5% 90% 5%;
+    height: 100%;
+  }
+  
+  .tweet-label {
+    text-align: left;
+    display: block;
+  }
+  
+  .error-message {
+    grid-column: 2;
+    border: 2px solid red;
+    color: red;
+    padding: 0.5em;
+    margin: 0.5em;
+    text-align: center;
+  }
+}
+
+ /* Responsive design for desktop */
+ @media only screen and (min-width: 1024px) {
+  body {
+    padding-top: 120px;
+    color: (84, 81, 73);
+    background-color: #dfeef3;
+    font-size: 24px;
+    font-family: 'Source Sans Pro';
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    height: 100%;
+  }
+  
+  .container {
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: 5% 90% 5%;
+    overflow: auto;
+    height: 100%;
+  }
+  
+  .tweet-label {
+    text-align: left;
+    display: block;
+  }
+  
+  .error-message {
+    grid-column: 2;
+    border: 2px solid red;
+    color: red;
+    width: 90%;
+    margin: auto;
+    text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
